FAMILIA, CHANGES

#### 0.6.0 (2010-12-10) ###############################

NOTE: 0.6 syntax is not compatible with previous versions. 

CHANGE: Mucho refactoring.


#### 0.5.3 (2010-12-10) ###############################

Initial public release
